--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -4,6 +4,11 @@
   unarchive:
     src: "https://releases.hashicorp.com/terraform/{{ terraform_version }}/terraform_{{ terraform_version }}_linux_amd64.zip"
     dest: /usr/bin
+    remote_src: yes
+
+- name: set permissions on terraform
+  file:
+    path: /usr/bin/teraform
     mode: 0755
     owner: root
     group: root
