--- a/meta/main.yml
+++ b/meta/main.yml
@@ -9,17 +9,31 @@ galaxy_info:
   platforms:
     - name: Alpine
       versions:
-        - 3.7
+        - all
+    - name: ArchLinux
+      version:
+        - all
+    - name: CentOS
+      version:
+        - 6
+        - 7
     - name: Debian
       versions:
         - all
+    - name: EL
+      version:
+        - 6
+        - 7
     - name: Fedora
+      versions:
+        - all
+    - name: OpenSUSE
       versions:
         - all
     - name: Ubuntu
       versions:
+        - trusty
         - artful
-        - bionic
 
   galaxy_tags:
     - terraform
