--- a/molecule/alpine-latest/molecule.yml
+++ b/molecule/alpine-latest/molecule.yml
@@ -8,14 +8,14 @@ driver:
 lint:
   name: yamllint
 platforms:
-  - name: terraform-fedora-28
-    image: fedora:28
+  - name: terraform-alpine-latest
+    image: alpine:latest
 provisioner:
   name: ansible
   lint:
     name: ansible-lint
 scenario:
-  name: fedora-28
+  name: alpine-latest
 verifier:
   name: goss
   lint:
