--- a/molecule/opensuse-tumbleweed/molecule.yml
+++ b/molecule/opensuse-tumbleweed/molecule.yml
@@ -8,14 +8,14 @@ driver:
 lint:
   name: yamllint
 platforms:
-  - name: terraform-alpine-3.7
-    image: alpine:3.7
+  - name: terraform-opensuse-tumbleweed
+    image: opensuse:tumbleweed
 provisioner:
   name: ansible
   lint:
     name: ansible-lint
 scenario:
-  name: alpine-3.7
+  name: opensuse-tumbleweed
 verifier:
   name: goss
   lint:
