--- a/meta/main.yml
+++ b/meta/main.yml
@@ -38,11 +38,11 @@ galaxy_info:
 
   galaxy_tags:
     - terraform
-    - Alpine
-    - CentOS
-    - Debian
-    - Fedora
-    - RHEL
-    - Ubuntu
+    - alpine
+    - centos
+    - debian
+    - fedora
+    - rhel
+    - ubuntu
 
 dependencies: []
