--- a/molecule/alpine-latest/molecule.yml
+++ b/molecule/alpine-latest/molecule.yml
@@ -10,6 +10,7 @@ lint:
 platforms:
   - name: terraform-alpine-latest
     image: alpine:latest
+    command: sh -c "while true ; do sleep 1 ; done"
 provisioner:
   name: ansible
   lint:
