Use templates README, cleanup playbooks and fix long-line issue.

--- a/molecule/alpine-edge/playbook.yml
+++ b/molecule/alpine-edge/playbook.yml
@@ -5,5 +5,5 @@
   gather_facts: false
 
   roles:
-    - role: robertdebock.bootstrap
-    - role: ansible-role-terraform
+    - robertdebock.bootstrap
+    - ansible-role-terraform
