--- a/molecule/archlinux/molecule.yml
+++ b/molecule/archlinux/molecule.yml
@@ -9,7 +9,7 @@ lint:
   name: yamllint
 platforms:
   - name: terraform-archlinux
-    image: base/archlinux
+    image: archlinux/base
 provisioner:
   name: ansible
   lint:
