--- a/molecule/default/prepare.yml
+++ b/molecule/default/prepare.yml
@@ -5,4 +5,6 @@
   gather_facts: no
 
   roles:
-    - robertdebock.bootstrap
+    - role: robertdebock.bootstrap
+    - role: robertdebock.core_dependencies
+    - role: robertdebock.ca_certificates
