Trusty is not supported anymore.

--- a/meta/main.yml
+++ b/meta/main.yml
@@ -29,7 +29,7 @@ galaxy_info:
         - all
     - name: Ubuntu
       versions:
-        - trusty
+        - bionic
 
   galaxy_tags:
     - terraform
