Variables in a role should be prepended with the name of the role.

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -8,6 +8,6 @@
     mode: 0755
     owner: root
     group: root
-  register: download_terraform
-  until: download_terraform is succeeded
+  register: terraform_download_terraform
+  until: terraform_download_terraform is succeeded
   retries: 3
