--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,5 +1,8 @@
 ---
 # tasks file for terraform
+- name: include assert.yml
+  include_tasks: assert.yml
+
 - name: download and install software
   unarchive:
     src: "{{ terraform_unarchive_src }}"
