--- a/.github/workflows/molecule.yml
+++ b/.github/workflows/molecule.yml
@@ -51,8 +51,14 @@ jobs:
             tag: "31"
           - image: "fedora"
             tag: "latest"
+          - image: "opensuse"
+            tag: "latest"
           - image: "ubuntu"
             tag: "latest"
+          - image: "ubuntu"
+            tag: "bionic"
+          - image: "ubuntu"
+            tag: "xenial"
     steps:
       - name: checkout
         uses: actions/checkout@v2
