--- a/.travis.yml
+++ b/.travis.yml
@@ -23,7 +23,10 @@ env:
     - image="debian" tag="bullseye"
     - image="fedora" tag="31"
     - image="fedora" tag="latest"
+    - image="opensuse" tag="latest"
     - image="ubuntu" tag="latest"
+    - image="ubuntu" tag="bionic"
+    - image="ubuntu" tag="xenial"
 
 cache:
   - pip
