--- a/meta/main.yml
+++ b/meta/main.yml
@@ -25,9 +25,14 @@ galaxy_info:
       versions:
         - 31
         - 32
+    - name: OpenSUSE
+      versions:
+        - all
     - name: Ubuntu
       versions:
         - focal
+        - bionic
+        - xenial
 
   galaxy_tags:
     - terraform
