--- a/molecule/default/verify.yml
+++ b/molecule/default/verify.yml
@@ -5,5 +5,5 @@
   gather_facts: no
 
   tasks:
-    - name: check if connection still works
-      ping:
+    - name: run terraform --version
+      command: terraform --version
