--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -3,3 +3,6 @@
 
 # The version of Terraform to install.
 terraform_version: 0.13.4
+
+# Where to place the binary.
+terraform_destination: /usr/local/bin
