--- a/tasks/assert.yml
+++ b/tasks/assert.yml
@@ -5,3 +5,10 @@
       - terraform_version is defined
       - terraform_version | length > 0
     quiet: yes
+
+- name: test if terraform_destination is set correctly
+  assert:
+    that:
+      - terraform_destination is defined
+      - terraform_destination | length > 0
+    quiet: yes
