Verify absolute path.

--- a/molecule/default/verify.yml
+++ b/molecule/default/verify.yml
@@ -6,4 +6,4 @@
 
   tasks:
     - name: run terraform --version
-      command: terraform --version
+      command: /usr/local/bin/terraform --version
