--- a/requirements.yml
+++ b/requirements.yml
@@ -1,4 +1,5 @@
 ---
-- robertdebock.bootstrap
-- robertdebock.ca_certificates
-- robertdebock.core_dependencies
+roles:
+  - name: robertdebock.bootstrap
+  - name: robertdebock.ca_certificates
+  - name: robertdebock.core_dependencies
