Test is a defined variable is a string.

--- a/tasks/assert.yml
+++ b/tasks/assert.yml
@@ -4,10 +4,12 @@
   assert:
     that:
       - terraform_version is defined
+      - terraform_version is string
     quiet: yes
 
 - name: test if terraform_destination is set correctly
   assert:
     that:
+      - terraform_destination is defined
       - terraform_destination is defined
     quiet: yes
