--- a/requirements.yml
+++ b/requirements.yml
@@ -3,3 +3,5 @@ roles:
   - name: robertdebock.bootstrap
   - name: robertdebock.ca_certificates
   - name: robertdebock.core_dependencies
+collections:
+  - name: community.general
