Find and quote risky values.

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -2,7 +2,7 @@
 # defaults file for terraform
 
 # The version of Terraform to install.
-terraform_version: 0.13.4
+terraform_version: "1.0.11"
 
 # Where to place the binary.
 terraform_destination: /usr/local/bin
