Add terraform_software_mirror for installation from local network mirror.

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -6,3 +6,6 @@ terraform_version: "1.0.11"
 
 # Where to place the binary.
 terraform_destination: /usr/local/bin
+
+# Terraform binary mirror:
+terraform_software_mirror: releases.hashicorp.com
