--- a/molecule/default/verify.yml
+++ b/molecule/default/verify.yml
@@ -5,6 +5,6 @@
   gather_facts: no
 
   tasks:
-    - name: run terraform --version
+    - name: Run terraform --version
       ansible.builtin.command:
         cmd: /usr/local/bin/terraform --version
