--- a/tasks/assert.yml
+++ b/tasks/assert.yml
@@ -5,11 +5,13 @@
     that:
       - terraform_version is defined
       - terraform_version is string
+      - terraform_version is not none
     quiet: yes
 
 - name: assert | Test if terraform_destination is set correctly
   ansible.builtin.assert:
     that:
       - terraform_destination is defined
-      - terraform_destination is defined
+      - terraform_destination is string
+      - terraform_destination is not none
     quiet: yes
