--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -4,14 +4,14 @@
 - name: Import assert.yml
   ansible.builtin.import_tasks:
     file: assert.yml
-  run_once: yes
+  run_once: true
   delegate_to: localhost
 
 - name: Download and install software
   ansible.builtin.unarchive:
     src: "{{ terraform_unarchive_src }}"
     dest: "{{ terraform_destination }}"
-    remote_src: yes
+    remote_src: true
     mode: "755"
     owner: root
     group: root
